# ReMe

./: README.md  README_ZH.md  pyproject.toml
benchmark/halumem/: eval_reme.py  quickstart.md
benchmark/longmemeval/: compute_stats.py  eval_longmemeval_reme.py  eval_longmemeval_reme_retrieve.py  eval_reme.yaml  eval_tools.py  llms.py  quickstart.md
docs/: copaw_context_design.md  copaw_context_design_zh.md  index.md  vector_store_api_guide.md
reme/: __init__.py  reme.py  reme_cli.py  reme_light.py
reme/agent/memory/: __init__.py
reme/agent/memory/personal/: personal_longmemeval_retriever.py  personal_longmemeval_retriever.yaml  personal_longmemeval_summarizer.py  personal_longmemeval_summarizer.yaml
reme/config/: cli.yaml
reme/core/: __init__.py  application.py  registry_factory.py  service_context.py
reme/core/as_token_counter/: __init__.py
reme/core/embedding/: base_embedding_model.py
reme/core/file_store/: __init__.py  chroma_file_store.py  sqlite_file_store.py  zvec_file_store.py
reme/core/op/: base_op.py  base_ray_op.py
reme/core/schema/: service_config.py
reme/core/utils/: llm_utils.py  logger_utils.py  std_logger.py
reme/core/vector_store/: __init__.py  chroma_vector_store.py  es_vector_store.py  obvec_vector_store.py  pgvector_store.py  qdrant_vector_store.py  zvec_vector_store.py
reme/memory/file_based/components/: __init__.py  cli.py  cli.yaml  compactor.py  summarizer.py
tests/: test_file_store.py  test_vector_store.py  test_zvec_vector_store.py
tests/vector/: test_reme_vector.py
